applications/opentelemetry-operator/base/resources/networkpolicy.deployment.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-operator-manager-allow-egress
  namespace: opentelemetry-operator-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: controller-manager
      app.kubernetes.io/name: opentelemetry-operator
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-operator-manager-allow-ingress
  namespace: opentelemetry-operator-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: controller-manager
      app.kubernetes.io/name: opentelemetry-operator
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 9443
    - protocol: TCP
      port: 8081
    - protocol: TCP
      port: 8443
