applications/opentelemetry-operator/base/resources/networkpolicy.test-pods.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-operator-tests-allow-egress
  namespace: opentelemetry-operator-system
spec:
  podSelector:
    matchLabels:
      helm.sh/hook: test
      app.kubernetes.io/name: opentelemetry-operator
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 443
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
